# messaging

./: CMakeLists.txt  README.md
include/messaging/: MessagePublisher.hpp  MessageReceiver.hpp
include/messaging/formatters/: TextFormatter.hpp
include/messaging/transports/: FileTransportRecvImpl.hpp  FileTransportSendImpl.hpp
src/: messaging.cpp
